# zql

./: .gitignore  .gitpod.yml  Dockerfile  Dockerfile.test  LICENSE  README.md  docker-compose.yml  ecs_service.json  main.py  pyproject.toml  task_definition.json  test-docker-compose.yml
.github/workflows/: ecs_deploy.yaml  pytest.yml
github/workflows/: pytest.yml
integration_tests/: conftest.py  test_db.py  test_transpile.py
integration_tests/sqlite/: test_conn.py
parser/: README.md
tables/: chars.csv  codes.csv  numbers.csv  peeps.csv  runes.csv
templates/: main.html
zql/: CHANGELOG.md  LICENSE  README.md  __init__.py  cleaner.py  cleaner_test.py  grammar.py  grammar_loader.py  grammar_loader_test.py  grammar_renderer.py  grammar_renderer_test.py  grammar_test.py  loader_test.py  main.py  main_grammar_test.py  main_test.py  parser.py  parser_test.py  pyproject.toml  renderer.py  renderer_test.py  sample_grammars.py  self_translate_queries_test.py  translate_sqlite_test.py  translator.py  translator_test.py  type_hints.py  types.py  zql_grammar.tmjd  zql_grammar_test.py
zql/genzql/: __init__.py  cleaner.py  grammar.py  loader.py  main.py  parser.py  renderer.py  translator.py  types.py  zql_grammar.tmjd
zql/tests/: cleaner_test.py  grammar_test.py  helpers.py  loader_test.py  main_test.py  parser_test.py  renderer_test.py  sample_grammars.py  self_translate_queries_test.py  translate_sqlite_test.py  translator_test.py
zql_api/: database.py  main.py
zql_api/templates/: main.html
zql_ui/: .env  .env.production  .gitignore  Dockerfile  index.html  package-lock.json  package.json  postcss.config.js  vite.config.ts
zql_ui/src/: App.tsx  ZqlApp.tsx  (+5 more)
(+9 files in other folders)
