[tool.poetry]
name = "zql"
version = "0.1.0"
description = "SQL for GenZ"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"
jinja2 = "^3.1.3"
python-multipart = "^0.0.7"
pandas = "^2.2.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
pre-commit = "^3.6.0"
flake8 = "^7.0.0"
flake8-bugbear = "^24.1.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
